Fixed minor spacing issue and made sure the anchor button to the 'find-dogs' view was inside the 'favorite-view'.

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ i:hover {
   text-align: center;
   font-size: large;
   font-weight: 350;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 .justify-between {
